testsuite/poke.pkl/ass-diag-9.pk
/* { dg-do compile } */

deftype Foo2 =
  struct
  {
    defun qqq = void:
      {
        defvar rs = "foo";
        rs[0] = 'x'; /* { dg-error "invalid l-value" } */
      }
  };
